--- a/snakeeyes/blueprints/budget/templates/budget/view.html
+++ b/snakeeyes/blueprints/budget/templates/budget/view.html
@@ -13,7 +13,7 @@
       <thead>
         <tr>
           <th class="col-header">
-            {{ items.sort('budget_year', 'Budget Year') }}
+            {{ items.sort('budge_year', 'Budget Year') }}
           </th>
           <th class="col-header">
             {{ items.sort('description') }}
