--- a/track/templates/layouts/app.html
+++ b/track/templates/layouts/app.html
@@ -56,4 +56,5 @@
 
 {% block footer %}
   <li><a href="{{ url_for('contact.index') }}">Contact</a></li>
+  <li><a href="{{ url_for('page.about') }}">About Us</a><li>
 {% endblock %}
