--- a/track/blueprints/budget/templates/budget/view.html
+++ b/track/blueprints/budget/templates/budget/view.html
@@ -22,6 +22,7 @@
       <tbody>
       {% for b in budget.items %}
         <tr>
+          <!--
           <td>{{ b.acct_num }}</td>
           <td>{{ b.budget_year }}</td>
           <td>{{ b.description }}</td>
@@ -34,6 +35,43 @@
           <td class="text-success">
             ${{ b.income_amount }}
           </td>
+          -->
+          <td>{{ b.acct_num }}</td>
+          <td>{{ b.budget_year }}</td>
+          <td>{{ b.description }}</td>
+
+          <td class="text-success" id='allocated_amount'></td>
+          <script>
+          function allocated() {
+              var num = {{ b.allocated_amount }};
+              var n = num.toFixed(2)
+              document.getElementById("allocated_amount").innerHTML = '$' + n;
+          }
+          </script>
+          <script>allocated();</script>
+
+          <td class="text-warning" id='expenses_amount'>
+          </td>
+          <script>
+          function expense() {
+              var num = {{ b.expenses_amount }};
+              var n = num.toFixed(2)
+              document.getElementById("expenses_amount").innerHTML = '$' + n;
+          }
+          </script>
+          <script>expense();</script>
+
+          <td class="text-success" id='income_amount'>
+          </td>
+          <script>
+          function income() {
+              var num = {{ b.income_amount }};
+              var n = num.toFixed(2)
+              document.getElementById("income_amount").innerHTML = '$' + n;
+          }
+          </script>
+          <script>income();</script>
+
         </tr>
       {% endfor %}
       </tbody>
@@ -41,12 +79,56 @@
     <div class="col-md-12 col-md-offset-8">
     {% for u in user %}
       {% if u.role == 'admin' %}
-          <h2>Current remain: $ <strong class="text-{{ 'success' if u.total_to_date > 0 else 'danger' }}">{{ u.total_to_date }}</strong></h2>
+          <h2>Current remain: <strong class="text-{{ 'success' if u.total_to_date > 0 else 'danger' }}" id='total_to_date'></strong></h2>
+          <script>
+          function total_d() {
+              var num = {{ u.total_to_date }};
+              var n = num.toFixed(2)
+              document.getElementById("total_to_date").innerHTML = '$' + n;
+          }
+          </script>
+          <script>total_d();</script>
+          
       {% else %}
-        <p>Allocated to date: $ <strong class="text-success">{{ u.allocated_to_date }}</strong></p>
-        <p>Expenses to date: $ <strong class="text-warning">{{ u.expenses_to_date }}</strong></p>
-        <p>Income to date: $<strong class="text-success">{{ u.income_to_date }}</strong></p>
-        <h1>Current remain: $ <strong class="text-{{ 'success' if u.total_to_date > 0 else 'danger' }}">{{ u.total_to_date }}</strong></h1>
+        <p>Allocated to date: <strong class="text-success" id='allocated_to_date'></strong></p>
+        <script>
+        function allocated_d() {
+            var num = {{ u.allocated_to_date }};
+            var n = num.toFixed(2)
+            document.getElementById("allocated_to_date").innerHTML = '$' + n;
+        }
+        </script>
+        <script>allocated_d();</script>
+        
+        <p>Expenses to date: <strong class="text-warning" id='expenses_to_date'></strong></p>
+        <script>
+        function expense_d() {
+            var num = {{ u.expenses_to_date }};
+            var n = num.toFixed(2)
+            document.getElementById("expenses_to_date").innerHTML = '$' + n;
+        }
+        </script>
+        <script>expense_d();</script>
+
+        <p>Income to date: <strong class="text-success" id='income_to_date'></strong></p>
+        <script>
+        function income_d() {
+            var num = {{ u.income_to_date }};
+            var n = num.toFixed(2)
+            document.getElementById("income_to_date").innerHTML = '$' + n;
+        }
+        </script>
+        <script>income_d();</script>
+
+        <h2>Current remain: <strong class="text-{{ 'success' if u.total_to_date > 0 else 'danger' }}" id='total_to_date'></strong></h2>
+        <script>
+        function total_d() {
+            var num = {{ u.total_to_date }};
+            var n = num.toFixed(2)
+            document.getElementById("total_to_date").innerHTML = '$' + n;
+        }
+        </script>
+        <script>total_d();</script>
       {% endif %}
     {% endfor %}
     </div>
